[package]
name = "pint-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Parse Toggl time-tracking CSV files to generate invoices"
repository = "https://github.com/kbonnici/pint-rs"
readme = "README.md"
keywords = ["toggl", "csv", "invoice", "time-tracking", "pintrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = "4.3.3"
csv = "1.2.2"
